[package]
name = "lcc-lib"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.80"
bincode = { version = "2.0.0-rc.3", features = ["std", "derive"] }
itertools = "0.12.1"
rand = "0.8.5"
schemars = "0.8.16"
serde = "1.0.197"
xorf = { version = "0.11.0", features = ["serde", "bincode"] }
