[package]
name = "lcc-lib"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "~1.0.98"
bincode = { version = "~2.0.1", features = ["std", "derive"] }
itertools = "~0.14.0"
rand = "~0.9.1"
schemars = "~0.9.0"
serde = "~1.0.219"
xorf = { version = "~0.11.0", features = ["serde", "bincode"] }
