[package]
name = "lcc-web-api"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcc-lib = { path="../lcc-lib" }

anyhow = "1.0.80"
axum = "0.7.4"
clap = { version = "4.5.2", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
log = "0.4.21"
serde = "1.0.197"
serde_json = "1.0.114"
simple_logger = "4.3.3"
tokio = { version = "1", features = ["full"] }
xorf = { version = "0.11.0", features = ["serde"] }
