[package]
name = "lcc-web-api"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcc-lib = { path="../lcc-lib" }

aide = { version = "~0.15.0", features = ["axum", "axum-json", "axum-query", "redoc", "macros"] }
anyhow = "~1.0.98"
axum = "~0.8.4"
clap = { version = "~4.5.40", features = ["derive"] }
clap-verbosity-flag = "~3.0.3"
ctrlc = "~3.4.7"
log = "~0.4.27"
schemars = "~0.9.0"
serde = "~1.0.219"
serde_json = "~1.0.140"
simple_logger = "~5.0.0"
tokio = { version = "1", features = ["full"] }
xorf = { version = "0.11.0", features = ["serde"] }
indexmap = "~2.10.0"
