[package]
name = "leaked-passwords-filter-tool"
version = "0.1.0"
edition = "2021"
publish = false
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcc-lib = { path="../lcc-lib" }

anyhow = "1.0.80"
clap = { version = "4.5.2", features = ["derive"] }
clap-verbosity-flag = "2.2.0"
ctrlc = "3.4"
log = "0.4.21"
rand = "0.8.5"
simple_logger = "4.3.3"
xorf = { version = "0.11.0", features = ["serde"] }
bincode = "1.3.3"
