[package]
name = "leaked-passwords-filter-tool"
version = "0.1.0"
edition = "2024"
publish = false
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lcc-lib = { path="../lcc-lib" }

anyhow = "~1.0.98"
clap = { version = "~4.5.40", features = ["derive"] }
clap-verbosity-flag = "~2.2.0"
ctrlc = "~3.4.7"
log = "~0.4.27"
rand = "~0.9.1"
simple_logger = "~5.0.0"
xorf = { version = "0.11.0", features = ["serde"] }
bincode = "~2.0.1"
